<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright [2013] [www.rapidpm.org / Sven Ruppert (sven.ruppert@rapidpm.org)]
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--for release only-->
    <!--<parent>-->
    <!--<groupId>org.sonatype.oss</groupId>-->
    <!--<artifactId>oss-parent</artifactId>-->
    <!--<version>7</version>-->
    <!--</parent>-->

    <packaging>jar</packaging>
	<groupId>org.rapidpm.demo</groupId>
    <artifactId>jaxenter-0018-di-dagger-intro</artifactId>
    <name>jaxenter-0018-di-dagger-intro</name>
    <description>JAXenter.de Blog DI Dagger Intro</description>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mockito-all.version>1.9.5</mockito-all.version>
        <junit.version>4.11</junit.version>
    </properties>



    <dependencies>
        <dependency>
            <groupId>com.squareup.dagger</groupId>
            <artifactId>dagger</artifactId>
            <version>1.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.squareup.dagger</groupId>
            <artifactId>dagger-compiler</artifactId>
            <version>1.2.2</version>
            <optional>true</optional>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.16</version>
                <!--<dependencies>-->
                <!--<dependency>-->
                <!--<groupId>org.apache.maven.surefire</groupId>-->
                <!--<artifactId>surefire-junit47</artifactId>-->
                <!--<version>2.16</version>-->
                <!--</dependency>-->
                <!--</dependencies>-->
                <configuration>
                    <!--<skipTests>true</skipTests>-->
                    <!--<forkCount>2.5C</forkCount>-->
                    <!--<forkCount>1</forkCount>-->
                    <!--<parallel>methods</parallel>-->
                    <!--<threadCount>10</threadCount>-->
                    <!--<reuseForks>false</reuseForks>-->
                    <!--<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                    <!--<argLine>-Xmx1024m</argLine>-->
                    <!--<forkMode>always</forkMode>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-repository-plugin</artifactId>
                <version>2.3.1</version>
            </plugin>
            <!--<plugin>-->
                <!--<artifactId>kotlin-maven-plugin</artifactId>-->
                <!--<groupId>org.jetbrains.kotlin</groupId>-->
                <!--<version>0.6.602</version>-->

                <!--<executions>-->
                    <!--<execution>-->
                        <!--<id>compile</id>-->
                        <!--<phase>compile</phase>-->
                        <!--<goals> <goal>compile</goal> </goals>-->
                    <!--</execution>-->

                    <!--<execution>-->
                        <!--<id>test-compile</id>-->
                        <!--<phase>test-compile</phase>-->
                        <!--<goals> <goal>test-compile</goal> </goals>-->
                    <!--</execution>-->
                <!--</executions>-->
            <!--</plugin>-->

        </plugins>
    </build>

    <!--for development of features/develop branch-->
    <distributionManagement>
        <repository>
            <id>releases</id>
            <name>RapidPM Releases</name>
            <url>http://${nexus.ip}/nexus/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>RapidPM Snapshots</name>
            <url>http://${nexus.ip}/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <profiles>
         <profile>
            <id>junit</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                            <include>**/junit/**</include>
                            </includes>
                            <excludes>
                                <exclude>**/perf/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>performance</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>**/perf/**</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

    <inceptionYear>2013</inceptionYear>
    <organization>
        <name>RapidPM</name>
        <url>http://www.rapidpm.org</url>
    </organization>
    <scm>
        <url>http://git.rapidpm.org/publikationen/jaxenter-de-0018-di-dagger-intro</url>
        <connection>scm:git:http://git.rapidpm.org:9988/publikationen/jaxenter-de-0018-di-dagger-intro.git</connection>
        <developerConnection>scm:git:http://git.rapidpm.org:9988/publikationen/jaxenter-de-0018-di-dagger-intro.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>Sven Ruppert</name>
            <email>sven.ruppert@rapidpm.org</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <issueManagement>
        <!--<system>Jira</system>-->
        <!--<url>https://bitbucket.org/rapidpm/rapidpm-modules/issues</url>-->
    </issueManagement>
    <ciManagement>
        <!--<system>Jenkins</system>-->
        <!--<url>http://jenkins.rapidpm.org/job/rapidpm-modules/</url>-->
        <!--<notifiers>-->
        <!--<notifier></notifier>-->
        <!--</notifiers>-->
    </ciManagement>
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

</project>